@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.aberdyne.droidnavi"
-    android:versionCode="1"
-    android:versionName="0.1" android:installLocation="auto">
+    android:versionCode="2"
+    android:versionName="1.0" android:installLocation="auto">
 
     <uses-sdk
         android:minSdkVersion="14"
