@@ -7,7 +7,7 @@
         <item>Add via QR Code</item>
     </string-array>
     <string name="about_txt">
-        Droid Navi v0.0.1\n
+        Droid Navi v1.0\n
         \n
         This app is licensced under GPL v2.\n
         \n
